--- a/app/views/admin/_sidebar_links.html.erb
+++ b/app/views/admin/_sidebar_links.html.erb
@@ -1,5 +1,5 @@
 This is the demo app for <%= link_to "Active Admin", "http://activeadmin.info" %>.
 Don't hesitate to check out the
-<%= link_to("source code for this page", "https://github.com/gregbell/activeadmin-store/blob/demo/app/admin/#{model}.rb") %>,
+<%= link_to("source code for this page", "https://github.com/gregbell/demo.activeadmin.info/blob/demo/app/admin/#{model}.rb") %>,
 the <%= link_to("Documentation", "http://activeadmin.info/documentation.html") %>
 and the <%= link_to("Github Repo", "https://github.com/gregbell/active_admin") %>.
