add source code (github) link to frontend header bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 
       <div id="auth">
         <a href='/admin'>Administration interface</a> |
+        <a href='http://github.com/gregbell/demo.activeadmin.info'>Source Code</a> |
         <% if logged_in? %>
           Welcome <%= current_user.username %>! Not you?
           <%= link_to "Log out", logout_path %>
