Use https for links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,13 @@
     <div id="container">
 
       <div id="flash_notice">
-        Welcome to the demo application of <a href='http://activeadmin.info'>ActiveAdmin</a>.
+        Welcome to the demo application of <a href='https://activeadmin.info'>ActiveAdmin</a>.
         Go <a href='/admin'>try out the Administration interface</a>!
       </div>
 
       <div id="auth">
         <a href='/admin'>Administration interface</a> |
-        <a href='http://github.com/gregbell/demo.activeadmin.info'>Source Code</a> |
+        <a href='https://github.com/gregbell/demo.activeadmin.info'>Source Code</a> |
         <% if logged_in? %>
           Welcome <%= current_user.username %>! Not you?
           <%= link_to "Log out", logout_path %>
