Use canonical home for repo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
       <div id="auth">
         <a href='/admin'>Administration interface</a> |
-        <a href='https://github.com/gregbell/demo.activeadmin.info'>Source Code</a> |
+        <a href='https://github.com/activeadmin/demo.activeadmin.info'>Source Code</a> |
         <% if logged_in? %>
           Welcome <%= current_user.username %>! Not you?
           <%= link_to "Log out", logout_path %>
