Remove unnecessary layout helper

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <% end %>
-      <%= content_tag :h2, yield(:title) if show_title? %>
+      <%= content_tag :h2, yield(:title) if content_for?(:title) %>
       <%= yield %>
     </div>
   </body>
