--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<% title "Sign up" %>
+<% content_for(:title) { "Sign up" } %>
 
 <p>Already have an account? <%= link_to "Log in", login_path %>.</p>
 
