Temporary v4 conversion for testing in Render
We want to test a deployed app on v4 in a production environment. We'll use Render for that.

Note that the sessions approach here is quite bad and broken. You can bypass it entirely. We aren't using admin_user model but user model instead with no devise actions so there isn't any sort of protection or integration. We'll revisit this when we rebuild the demo app.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,8 @@
     <title><%= content_for?(:title) ? yield(:title) : "The Active Admin Store" %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= javascript_include_tag "turbo", type: "module", defer: true %>
-    <%= stylesheet_link_tag    "application", media: "all", 'data-turbo-track': "reload" %>
-    <%= javascript_include_tag "application", 'data-turbo-track': "reload" %>
-
+    <%#= stylesheet_link_tag "application" %>
+    <%#= javascript_include_tag "application", 'data-turbo-track': "reload" %>
     <%= yield(:head) %>
   </head>
   <body>
